--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -8,13 +8,12 @@
     <link rel="icon" type="image/x-icon" href="https://cdn.autodesk.io/favicon.ico">
     <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/style.css">
     <link rel="stylesheet" href="/main.css">
-    <title>Autodesk Platform Services: Simple Viewer</title>
+    <title>Maestro Web Viewer</title>
 </head>
 
 <body>
     <div id="header">
-        <img class="logo" src="https://cdn.autodesk.io/logo/black/stacked.png" alt="Autodesk Platform Services">
-        <span class="title">Simple Viewer</span>
+        <img class="logo" src="favicon.ico" alt="Autodesk Platform Services">
         <select name="models" id="models"></select>
         <button id="upload" title="Upload New Model">Upload</button>
         <input style="display: none" type="file" id="input">
